updated the code

--- a/index.html
+++ b/index.html
@@ -7,97 +7,6 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-	<!--
-	<div class="grid-container">
-		<div class="grid0">
-			
-		</div>
-		<div class="grid1">
-			<h1><b>DD</b></h1>
-		</div>
-		<div class="grid2">
-			<!--<nav>
-				<a href="#">PRODUCTEN</a>
-				<a href="#">ABONNEREN</a>
-				<a href="#">OVER ONS</a>
-				<a href="#">VRAGEN</a>
-			</nav>
-			<ul style="list-style-type: none; width: 500px;padding-right: 100px;color: darkblue;padding-left: 0px;text-align: center;">
-				<li style="display: inline;padding-right: 10px;font-size: 10px;">PRODUCTEN</li>
-				<li style="display: inline;padding-right: 10px;font-size: 10px;">ABONNEREN</li>
-				<li style="display: inline;padding-right: 10px;font-size: 10px;">OVER ONS</li>
-				<li style="display: inline;padding-right: 10px;font-size: 10px;">VRAGEN</li>
-			</ul>
-		</div>
-		<div class="grid3"><!--
-			<img src="C:\Users\v\Desktop\tasks\task1\Task1\images\images\website_list_page\Rounded-Rectangle-2.png">
-			<p>Lorem ipsum dolor sit amet,<br> consectetur adipiscing elit,<br> sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-		</div>
-		<div class="grid4">
-			
-		</div>
-		<div class="grid5">
-			<div class="divinside">
-				<h3>Abonneren</h3>
-				<hr>
-				<p class="p">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-				<button class="btn1">meer info</button>
-			</div>
-			<div class="div-container1">
-				<div class="smdiv1">
-					<img class="img1" src="C:\Users\v\Desktop\tasks\task1\Task1\images\images\website_list_page\rec-blue.png">
-					<h4>Nutrilon<br>Pronultrat</h4>
-					<img class="img2" src="C:\Users\v\Desktop\tasks\task1\Task1\images\images\website_list_page\package.png">
-					<button class="btn2">KOPEN</button>
-					<button class="btn3">ABONNEREN</button>
-				</div>
-					<div class="smdiv2">
-					<img class="img1" src="C:\Users\v\Desktop\tasks\task1\Task1\images\images\website_list_page\rec-blue.png">
-					<h4>Nutrilon<br>Pronultrat</h4>
-					<img class="img2" src="C:\Users\v\Desktop\tasks\task1\Task1\images\images\website_list_page\package.png">
-					<button class="btn2">KOPEN</button>
-					<button class="btn3">ABONNEREN</button>
-				</div>
-					<div class="smdiv3">
-					<img class="img1" src="C:\Users\v\Desktop\tasks\task1\Task1\images\images\website_list_page\rec-blue.png">
-					<h4>Nutrilon<br>Pronultrat</h4>
-					<img class="img2" src="C:\Users\v\Desktop\tasks\task1\Task1\images\images\website_list_page\package.png">
-					<button class="btn2">KOPEN</button>
-					<button class="btn3">ABONNEREN</button>
-				</div>
-			</div>
-			<div class="div-container2">
-				<div class="smdiv4">
-					<img class="img1" src="C:\Users\v\Desktop\tasks\task1\Task1\images\images\website_list_page\rec-blue.png">
-					<h4>Nutrilon<br>Pronultrat</h4>
-					<img class="img2"src="C:\Users\v\Desktop\tasks\task1\Task1\images\images\website_list_page\package.png">
-					<button class="btn2">KOPEN</button>
-					<button class="btn3">ABONNEREN</button>
-				</div>
-				<div class="smdiv5">
-					<img class="img1" src="C:\Users\v\Desktop\tasks\task1\Task1\images\images\website_list_page\rec-blue.png">
-					<h4>Nutrilon<br>Pronultrat</h4>
-					<img class="img2" src="C:\Users\v\Desktop\tasks\task1\Task1\images\images\website_list_page\package.png">
-					<button class="btn2">KOPEN</button>
-					<button class="btn3">ABONNEREN</button>
-				</div>
-				<div class="smdiv6">
-					<img class="img1" src="C:\Users\v\Desktop\tasks\task1\Task1\images\images\website_list_page\rec-blue.png">
-					<h4>Nutrilon<br>Pronultrat</h4>
-					<img class="img2" src="C:\Users\v\Desktop\tasks\task1\Task1\images\images\website_list_page\package.png">
-					<button class="btn2">KOPEN</button>
-					<button class="btn3">ABONNEREN</button>
-				</div>
-			</div>
-		</div>
-		<div class="grid6">
-			<h2>DD</h2>
-			<p class="contact1">Contact</p>
-			<p class="contact2">Tel.<br>0123456789<br><br>Address.<br>ABC colony<br>Ghaziabad</p>
-			<p class="contact3">E-mail:<br>dutchdairy@gmail.com<br><br>Website:<br>dutchdairy.com</p>
-			<p class="contact4">Sitemap<br>ABONNERON<br>PRODUCTEN<br>OVER ONS<br>VRAGEN</p>
-		</div>
-	</div>-->
 	<div class="flex-container">
 		<div class="wrapper1">
 			<div class="f1">
@@ -128,6 +37,105 @@
 				<p class="p3">Etiam posuere quam ac quam. Maecenas aliquet accumsan leo. Nullam dapibus fermentum ipsum. Etiam quis quam. Integer lacinia. Nulla est. Nulla turpis magna, cursus sit amet, suscipit a, interdum id, felis. Integer vulputate sem a nibh rutrum consequat.</p>
 				<button class="btn1">MEER INFO</button>
 			</div>
+			<ul class="ul2">
+				<li>
+					<div class="outerdiv">
+						<div class="bluediv">
+							<h5>Nutrilon<br>Pronultrat</h5>
+						</div>
+						<img class="img3" src="C:\Users\v\Desktop\tasks\task1\Task1\images\images\website_list_page\package.png">
+						<button class="btn2">
+							KOPEN
+						</button>
+						<button class="btn3">
+							ABONNEREN
+						</button>
+					</div>
+				</li>
+				<li>
+					<div class="outerdiv">
+						<div class="bluediv">
+							<h5>Nutrilon<br>Pronultrat</h5>
+						</div>
+						<img class="img3" src="C:\Users\v\Desktop\tasks\task1\Task1\images\images\website_list_page\package.png">
+						<button class="btn2">
+							KOPEN
+						</button>
+						<button class="btn3">
+							ABONNEREN
+						</button>
+					</div>
+				</li>
+				<li>	
+					<div class="outerdiv">
+						<div class="bluediv">
+							<h5>Nutrilon<br>Pronultrat</h5>
+						</div>
+						<img class="img3" src="C:\Users\v\Desktop\tasks\task1\Task1\images\images\website_list_page\package.png">
+						<button class="btn2">
+							KOPEN
+						</button>
+						<button class="btn3">
+							ABONNEREN
+						</button>
+					</div>
+				</li>
+			</ul>
+			<ul class="ul2">
+				<li>
+					<div class="outerdiv">
+						<div class="bluediv">
+							<h5>Nutrilon<br>Pronultrat</h5>
+						</div>
+						<img class="img3" src="C:\Users\v\Desktop\tasks\task1\Task1\images\images\website_list_page\package.png">
+						<button class="btn2">
+							KOPEN
+						</button>
+						<button class="btn3">
+							ABONNEREN
+						</button>
+					</div>
+				</li>
+				<li>
+					<div class="outerdiv">
+						<div class="bluediv">
+							<h5>Nutrilon<br>Pronultrat</h5>
+						</div>
+						<img class="img3" src="C:\Users\v\Desktop\tasks\task1\Task1\images\images\website_list_page\package.png">
+						<button class="btn2">
+							KOPEN
+						</button>
+						<button class="btn3">
+							ABONNEREN
+						</button>
+					</div>
+				</li>
+				<li>	
+					<div class="outerdiv">
+						<div class="bluediv">
+							<h5>Nutrilon<br>Pronultrat</h5>
+						</div>
+						<img class="img3" src="C:\Users\v\Desktop\tasks\task1\Task1\images\images\website_list_page\package.png">
+						<button class="btn2">
+							KOPEN
+						</button>
+						<button class="btn3">
+							ABONNEREN
+						</button>
+					</div>
+				</li>
+			</ul>
+		</div>
+	</div>
+	<div class="flex-container3">
+		<div class="wrapper3">
+			<h2 class="h2_4">DD</h2>
+			<ul class="ul3">
+				<li class="li3">Contact</li>
+				<li class="li3">Tel.<br>123 456 78 90<br><br>Address.<br>kerkstrat99<br>Maastricht</li>
+				<li class="li3">E-mail:<br>dutchdairy@info.com<br><br>website:<br>www.dutchdairy.com</li>
+				<li class="li3">Sitemap<br>PRODUCTEN<br>ABONNEREN<br>OVER ONS<br>VRAGEN</li>
+			</ul>
 		</div>
 	</div>
 </body>
